# k8s-manifest-fix

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: main.yml
pre_commit_hooks/: fix_manifest_resources.py
tests/: fix_manifest_resources_test.py
