[metadata]
name = k8s_manifest_fix
version = 0.1.0
description = hook to adjust resources in k8s manifests.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JBOClara/k8s-manifest-fix
author = Julien Boulanger
author_email = julien.boulanger+github@fr.clara.net
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    PyYAML==6.0.1
    bitmath==1.3.3.1
    certifi==2023.11.17
    charset-normalizer==3.3.2
    idna==3.6
    requests==2.31.0
    ruamel.yaml==0.18.5
    ruamel.yaml.clib==0.2.8
    urllib3==2.1.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    fix-manifest-resources = pre_commit_hooks.fix_manifest_resources:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
